# smtr-data-engineering-challenge

./: 404.html  Makefile  README.md  config.ini  index.html  logging.ini  mkdocs.yml  pyproject.toml  sitemap.xml
coverage/: covindex.html  d_1eba4d86d01f0133___init___py.html  d_1eba4d86d01f0133_abs_task_py.html  d_1eba4d86d01f0133_load_buses_status_task_py.html  d_1eba4d86d01f0133_parse_to_csv_task_py.html  d_1eba4d86d01f0133_send_to_storage_task_py.html  d_776bc33a40edeb3c___init___py.html  d_776bc33a40edeb3c_config_driver_py.html  d_776bc33a40edeb3c_logger_driver_py.html  d_b9a00e55f22b3d77___init___py.html  d_b9a00e55f22b3d77_flow_py.html  index.html  status.json
driver/: index.html
driver.config_driver/: index.html
driver.logger_driver/: index.html
overview/: index.html
tasks/: index.html
tests/driver/: config_driver_test.py  test_config_driver.py  test_logger_driver.py
tests/tasks/: mock_data.csv  mock_data.json  test_abs_task.py  test_load_buses_status_task.py  test_parse_to_csv.py  test_send_to_storage_task.py
tools/: flow.py
tools/driver/: config_driver.py  logger_driver.py
tools/tasks/: abs_task.py  load_buses_status_task.py  parse_to_csv_task.py  send_to_storage_task.py
